--- a/addons/wpmm-gridpost/wpmm-gridpost.css
+++ b/addons/wpmm-gridpost/wpmm-gridpost.css
@@ -1,302 +1,310 @@
 .wpmm-vertical-tabs {
-  display: flex;
-  background: #fff;
-  margin: 0 -25px -25px -25px;
+    display: flex;
+    /* background: #fff; */
+    margin: 0 -15px -20px -15px;
 }
 .wpmm-vertical-tabs-nav {
-  width: 20%;
-  background: #f5f5f5;
-  margin: 0;
-  border-right: 1px solid #eee;
+    width: 20%;
+    /* background: #f5f5f5; */
+    margin: 0;
+    border-right: 1px solid #eee;
 }
 .wpmm-vertical-tabs-content {
-  width: 80%;
-  padding: 20px;
+    width: 80%;
+    padding: 20px;
 }
 
 ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul li{
-  padding: 6px 25px;
-  text-align: right;
-  border-bottom: 1px solid transparent;
-  border-top: 1px solid transparent;
-  margin-right: -1px;
+    text-align: right;
+    border-bottom: 1px solid transparent;
+    border-top: 1px solid transparent;
+    margin-right: -1px;
 }
 ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul li a {
-  background: none !important;
+    background: none !important;
+    padding: 6px 25px;
+    display: block;
+    transition: 0s !important;
 }
 .wpmm-grid-post-img-wrap a {
-  padding: 0 !important;
+    padding: 0 !important;
 }
-ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul li.active {
-  background: #fff;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-  border-right: 0;
+ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul li a{
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
 }
-#wp-megamenu-top ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul li a {
-  margin-bottom: 0;
-  padding: 0;
+ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul li.active a{
+    background: #fff;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    border-right: 0;
+}
+#wp-megamenu-top ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul li a a{
+    margin-bottom: 0;
+    padding: 0;
 }
 .wpmm-vertical-tabs .wpmm-tab-btns >li {
-  display: block;
-  border: none;
+    display: block;
+    border: none;
 }
 
 .wpmm-vertical-tabs .wpmm-tab-btns >li >a {
-  display: block;
-  line-height: 18px;
-  padding: 10px 10px 10px 33px;
-  position: relative;
-  color: #000;
+    display: block;
+    line-height: 18px;
+    padding: 10px 10px 10px 33px;
+    position: relative;
+    color: #000;
 }
 .wpmm-vertical-tabs .wpmm-tab-pane {
-  display: none;
+    display: none;
 }
 .wpmm-vertical-tabs .wpmm-tab-pane.active {
-  display: block;
-  animation: fadeIn .5s;
+    display: block;
+    animation: fadeIn .5s;
 }
 .wpmm-vertical-tabs .wpmm-tab-pane .wpmm-article-info {
-  padding: 22px 25px 23px;
-  background: #fff;
+    padding: 22px 25px 23px;
+    background: #fff;
 }
 .wpmm-vertical-tabs .wpmm-tab-pane .wpmm-article-info .date {
-  color: #B2B2B2;
-  font-size: 13px;
-  letter-spacing: -0.4px;
+    color: #B2B2B2;
+    font-size: 13px;
+    letter-spacing: -0.4px;
 }
 .wpmm-vertical-tabs .wpmm-tab-pane .wpmm-article-info .entry-title {
-  font-size: 15px;
-  margin-bottom: 0;
-  font-weight: 400;
-  margin-top: 5px;
+    font-size: 15px;
+    margin-bottom: 0;
+    font-weight: 400;
+    margin-top: 5px;
 }
 .wpmm-vertical-tabs .wpmm-tab-pane .wpmm-article-info .entry-title >a {
-  color: #232323;
-  letter-spacing: -0.5px;
-  line-height: 22px;
-  -webkit-transition: .3s;
-  -o-transition: .3s;
-  transition: .3s;
+    color: #232323;
+    letter-spacing: -0.5px;
+    line-height: 22px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
 }
 .wpmm-vertical-tabs .wpmm-tab-pane .wpmm-article-info .entry-title >a:hover {
-  color: #ef3f48;
+    color: #ef3f48;
 }
 
 ul.wp-megamenu li ul.wp-megamenu-sub-menu .wpmm-vertical-tabs-nav ul {
-  position: relative;
-  left: 0;
-  margin-top: 0;
-  top: 0;
-  padding: 40px 0;
+    position: relative;
+    left: 0;
+    margin-top: 0;
+    top: 0;
+    padding: 40px 0;
 }
 
 @keyframes spins {
-  from{
-    transform: rotate(0deg);
-  }to{
-     transform: rotate(360deg);
-   }
+    from{
+        transform: rotate(0deg);
+    }to{
+         transform: rotate(360deg);
+     }
 }
 
 
 
 .wpmm-grid-post-img {
-  position: relative;
-  line-height: 0;
-  font-size: 0;
-  height: 180px;
-  background-position: 50% !important;
+    position: relative;
+    line-height: 0;
+    font-size: 0;
+    height: 180px;
+    background-position: 50% !important;
 
 }
 .wpmm-grid-post-img-wrap {
-  position: relative;
+    position: relative;
 }
 .wpmm-grid-post-img-wrap .post-in-image {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: auto;
-  height: auto;
-  display: inline-block;
-  line-height: 0;
-  font-size: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: auto;
+    height: auto;
+    display: inline-block;
+    line-height: 0;
+    font-size: 0;
 }
 .wpmm-grid-post .wpmm-grid-post-img a {
-  padding: 0;
-  width: auto;
+    padding: 0;
+    width: auto;
 }
 .wpmm-grid-post .wpmm-grid-post-img-wrap .post-in-image a {
-  color: #fff !important;
-  background: #252525 !important;
-  padding: 2px 12px !important;
-  width: auto;
-  height: auto;
-  display: inline-block !important;
-  font-size: 13px !important;
-  text-transform: uppercase;
-  font-weight: 400;
-  line-height: 16px;
-  transition: 400ms;
-  -webkit-transition: 400ms;
-  line-height: 20px;
-  margin-right: 2px;
+    color: #fff !important;
+    background: #252525 !important;
+    padding: 2px 12px !important;
+    width: auto;
+    height: auto;
+    display: inline-block !important;
+    font-size: 13px !important;
+    text-transform: uppercase;
+    font-weight: 400;
+    line-height: 16px;
+    transition: 400ms;
+    -webkit-transition: 400ms;
+    line-height: 20px;
+    margin-right: 2px;
 }
 .wpmm-grid-post .wpmm-grid-post-img-wrap .post-in-image a:hover {
-  color: #fff !important;
-  background: #444 !important;
+    color: #fff !important;
+    background: #444 !important;
 }
 .wpmm-grid-post-content .grid-post-title {
-  margin: 5px 0 0;
-  padding: 0;
-  font-weight: 600;
+    margin: 5px 0 0;
+    padding: 0;
+    font-weight: 600;
 }
 .wpmm-grid-post-content .post-in-price {
-  display: inline-block;
-  margin: -2px 0 4px;
-  color: #777;
-  font-size: 13px;
+    display: inline-block;
+    margin: -2px 0 4px;
+    /* color: #777; */
+    font-size: 13px;
 }
 .wpmm-grid-post-content .post-in-price .post-regular-price{
-  margin-right: 5px;
+    margin-right: 5px;
 }
 .wpmm-grid-post-content .grid-post-title a {
-  padding: 0;
-  margin: 0;
-  width: auto;
-  color: #000;
-  transition: 400ms;
-  -webkit-transition: 400ms;
-  font-weight: 600 !important;
+    padding: 0;
+    margin: 0;
+    width: auto;
+    color: #000;
+    transition: 400ms;
+    -webkit-transition: 400ms;
+    font-weight: 600 !important;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 .wpmm-grid-post-content .grid-post-title a:hover {
-  color: #666;
+    color: #666;
 }
 
 .wpmm-grid-post-img img {
-  width: 100%;
+    width: 100%;
 }
 
 /* manage post grid */
 .wpmm-grid-post-row {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin: 0 -10px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0 -10px;
 }
 .wpmm-grid-post {
-  padding: 0 10px;
+    padding: 0 10px;
 }
 .wpmm-grid-post.col1 {
-  width: 100%;
+    width: 100%;
 }
 .wpmm-grid-post.col2 {
-  width: 50%;
+    width: 50%;
 }
 .wpmm-grid-post.col3 {
-  width: 33.33333%;
+    width: 33.33333%;
 }
 .wpmm-grid-post.col4 {
-  width: 25%;
+    width: 25%;
 }
 .wpmm-grid-post.col5 {
-  width: 20%;
+    width: 20%;
 }
 
 /* grid control */
 .wpmm-gridcontrol-left,
 .wpmm-gridcontrol-right {
-  padding: 7px 8px;
-  border: 1px solid #e2e2e2;
-  display: inline-block;
-  width: auto;
-  height: auto;
-  font-size: 18px;
-  margin-top: 12px;
-  color: #333;
-  border-radius: 2px;
-  transition: 400ms;
-  -webkit-transition: 400ms;
-  cursor: pointer;
+    padding: 7px 8px;
+    border: 1px solid #e2e2e2;
+    display: inline-block;
+    width: auto;
+    height: auto;
+    font-size: 18px;
+    margin-top: 12px;
+    color: #333;
+    border-radius: 2px;
+    transition: 400ms;
+    -webkit-transition: 400ms;
+    cursor: pointer;
 }
 .wpmm-gridcontrol-left:hover,
 .wpmm-gridcontrol-right:hover {
-  background: #000;
-  border: 1px solid #000;
-  color: #fff;
+    background: #000;
+    border: 1px solid #000;
+    color: #fff;
 }
 
 .wpmm-gridcontrol-left {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 .wpmm-gridcontrol-left.disablebtn,
 .wpmm-gridcontrol-right.disablebtn{
-  border: 1px solid #eee;
-  color: #ddd;
+    border: 1px solid #eee;
+    color: #ddd;
 }
 .wpmm-gridcontrol-left.disablebtn:hover,
 .wpmm-gridcontrol-right.disablebtn:hover {
-  background: none;
-  border: 1px solid #eee;
-  color: #ddd;
+    background: none;
+    border: 1px solid #eee;
+    color: #ddd;
 }
 
 /* spinner */
 .spinwarp {
-  position: relative;
+    position: relative;
 }
 .spinners{
-  width: 60px;
-  height: 60px;
-  border: 5px solid #ffffff;
-  border-top: 5px solid #18bef9;
-  border-radius: 100%;
-  margin: auto;
-  animation: spins .9s infinite linear;
-  position: absolute;
-  left: 50%;
-  margin-left: -30px;
-  top: 50%;
-  margin-top: -30px;
-  z-index: 1;
+    width: 60px;
+    height: 60px;
+    border: 5px solid #ffffff;
+    border-top: 5px solid #18bef9;
+    border-radius: 100%;
+    margin: auto;
+    animation: spins .9s infinite linear;
+    position: absolute;
+    left: 50%;
+    margin-left: -30px;
+    top: 50%;
+    margin-top: -30px;
+    z-index: 1;
 }
 .spinwarp:after {
-  position: absolute;
-  content: "";
-  left: 0;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(245, 245, 245, 0.88);
-  width: 100%;
-  height: 100%
+    position: absolute;
+    content: "";
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(245, 245, 245, 0.88);
+    width: 100%;
+    height: 100%
 }
 
 @media (max-width: 767px) {
-  .wpmm-vertical-tabs {
-    display: inline-block;
-  }
-  .wpmm-vertical-tabs-nav {
-    width: 100%;
-    margin: 0 0 20px;
-    border-right: none;
-  }
-  .wpmm-vertical-tabs-content {
-    width: 100%;
-  }
-  .wpmm-grid-post.col3 {
-    width: 50%;
-  }
-  .wpmm-grid-post.col4 {
-    width: 50%;
-  }
-  .wpmm-grid-post.col5 {
-    width: 50%;
-  }
+    .wpmm-vertical-tabs {
+        display: inline-block;
+    }
+    .wpmm-vertical-tabs-nav {
+        width: 100%;
+        margin: 0 0 20px;
+        border-right: none;
+    }
+    .wpmm-vertical-tabs-content {
+        width: 100%;
+    }
+    .wpmm-grid-post.col3 {
+        width: 50%;
+    }
+    .wpmm-grid-post.col4 {
+        width: 50%;
+    }
+    .wpmm-grid-post.col5 {
+        width: 50%;
+    }
 }
 
 
